--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 
     "require": {
         "symfony/console": "2.1.*",
+        "symfony/finder": "2.1.*",
         "symfony/event-dispatcher": "2.1.*"
     },
 
