--- a/composer.json
+++ b/composer.json
@@ -5,17 +5,21 @@
         "behat/behat": "*",
         "davedevelopment/montserrat": "*",
         "mockery/mockery": "*",
-        "davedevelopment/hamcrest-php": "*"
+        "davedevelopment/hamcrest-php": "*",
+        "monolog/monolog": "*"
     },
 
     "require": {
         "symfony/console": "2.1.*",
         "symfony/finder": "2.1.*",
-        "symfony/event-dispatcher": "2.1.*"
+        "symfony/event-dispatcher": "2.1.*",
+        "cilex/cilex": "*"
     },
 
     "suggest": {
-        "mockery/mockery": "For mocks and stubs"
+        "mockery/mockery": "For mocks and stubs",
+        "monolog/monolog": "For logging",
+        "symfony/yaml": "For yaml config files"
     },
 
     "autoload": {
