Added mockery service provider, documented config

--- a/dspec.yml.dist
+++ b/dspec.yml.dist
@@ -1,9 +1,25 @@
 default:
+
+    # Load hamcrest matchers
+    bootstrap: vendor/davedevelopment/hamcrest-php/hamcrest/Hamcrest.php
+
     extensions:
+        # Load an extension by class name, along with (C|S)ilex style options
         Cilex\Provider\MonologServiceProvider:
             monolog.logfile: dspec.log
             monolog.level: 100
             monolog.name: dspec
+
+        # Load a DSpec extension with short name
+        mockery: ~ 
+
+    # The default specs to run, files or dirs relative to the cwd
     paths: [ 'spec' ]
+
+    # Formatters, like extensions, shortname or class name as key
     formatters:
+        # default progress formatter
         progress: ~
+        # use the summary formatter to output to a log
+        summary: 
+            out: dspec.log
