--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "davedevelopment/dspec",
     "minimum-stability": "dev",
+    "description": "A BDD spec style testing tool for PHP 5.4",
+    "license": "MIT",
 
     "require-dev": {
         "behat/behat": "*",
@@ -13,7 +15,7 @@
     "require": {
         "symfony/console": "2.1.*",
         "symfony/finder": "2.1.*",
-        "symfony/event-dispatcher": "2.1.*",
+        "symfony/event-dispatcher": "2.1.*"
     },
 
     "suggest": {
