--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require": {
         "symfony/console": "2.1.*",
         "symfony/finder": "2.1.*",
-        "symfony/event-dispatcher": "2.1.*"
+        "symfony/event-dispatcher": "2.1.*",
+        "pimple/pimple": "dev-master"
     },
 
     "suggest": {
