--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "symfony/console": "2.1.*",
         "symfony/finder": "2.1.*",
         "symfony/event-dispatcher": "2.1.*",
-        "pimple/pimple": "dev-master",
-        "beberlei/assert": "*"
+        "pimple/pimple": ">=1.0.0",
+        "beberlei/assert": ">=1.0.0"
     },
 
     "suggest": {
