--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require-dev": {
         "behat/behat": "*",
         "davedevelopment/montserrat": "*",
+        "davedevelopment/hamcrest-php": "*",
         "mockery/mockery": "*",
         "davedevelopment/hamcrest-php": "*",
         "monolog/monolog": "*"
