--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,21 @@
 {
     "name": "davedevelopment/dspec",
-    "minimum-stability": "dev",
     "description": "A BDD spec style testing tool for PHP 5.3",
     "license": "MIT",
 
     "require-dev": {
         "behat/behat": "*",
-        "davedevelopment/montserrat": "*",
-        "davedevelopment/hamcrest-php": "*",
+        "davedevelopment/montserrat": "*@dev",
         "mockery/mockery": "*",
-        "davedevelopment/hamcrest-php": "*",
+        "davedevelopment/hamcrest-php": "*@dev",
         "monolog/monolog": "*"
     },
 
     "require": {
-        "symfony/console": "2.1.*",
-        "symfony/finder": "2.1.*",
-        "symfony/event-dispatcher": "2.1.*",
-        "pimple/pimple": ">=1.0.0",
-        "beberlei/assert": ">=1.0.0"
+        "symfony/console": "~2.1",
+        "symfony/finder": "~2.1",
+        "symfony/event-dispatcher": "~2.1",
+        "pimple/pimple": "~1.0"
     },
 
     "suggest": {
@@ -41,5 +38,11 @@
         {"type": "vcs", "url": "http://github.com/davedevelopment/hamcrest-php"}
     ],
 
-    "bin": ["bin/dspec"]
+    "bin": ["bin/dspec"],
+
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    }
 }
